# gala

./: .gitignore  CMakeLists.txt  Cyano_acclimate.py  Cyano_acclimate_hex.py  Cyano_acclimate_opt.py  DrawAntennae.jl  Enthalpic_tuned_antenna.py  Lattice_antenna.py  Makefile  PSII_branched.py  PSII_branched_acclimate.py  PSII_cyan.py  PSII_params.py  README  README.md  antenna.c  antenna.f  antenna.f90  antenna.py  antenna_sat_rc.py  antenna_torch.py  block.f  block_hop.py  build_matrix.pyx  constants.py  draw_antenna.jl  genetic_algorithm.py  individual_setup.py  light.py  loop_analysis.py  loops.py  main.f  main.f90  main.py  nnls.c  nnls.f  nnls.f90  nnls_test.py  pbs_script.py  pigment_data.json  (+12 more)
pigments/: 6803_fig1b_PC.csv  6803_fig1b_apc.csv  apc_abs.txt  apc_ems.txt  b_pe_febs_2012.csv  b_pe_j_biotech_fig2.csv  bchl_a.csv  bchl_a_abs.txt  bchl_a_ems.txt  bchl_b_abs.txt  bchl_b_ems.txt  c_pe_mar_drugs_2023.csv  chl_a_abs.txt  chl_a_ems.txt  chl_a_methanol_chen.csv  chl_a_methanol_chen_full.csv  chl_b_abs.txt  chl_b_ems.txt  chl_b_methanol_chen.csv  chl_b_methanol_chen_full.csv  chl_d_abs.txt  chl_d_ems.txt  chl_d_methanol_chen.csv  chl_d_methanol_chen_full.csv  chl_f_abs.txt  chl_f_ems.txt  chl_f_methanol_chen.csv  chl_f_methanol_chen_full.csv  pc_abs.txt  pc_ems.txt  pe_abs.txt  pe_ems.txt  pigment_data.csv  pigment_data.json  r-pe_abs.txt  r-pe_ems.txt  r_apc.csv  r_apc_full.csv  r_pc_full.csv  r_pe_abs.txt  (+3 more)
scripts/: anox_diffusion_results.py  avg_abs_generate.py  mpi_test.py  pbs_script.py  phz_loop_plot.py  rc_rate_testing.py  rc_script.py
spectra/: 100_plotted_dataset.csv  25_plotted_dataset.csv  5_plotted_dataset.csv  PCC_6803_Abs.txt  PSII.csv  SP_6301_Abs.txt  a_marina.csv  acaryochloris.csv  anderson_2003_cool_white_fluo.csv  anderson_2003_cool_white_fluo_30_mu_ein.csv  bby_spinach.csv  filter_far_red.csv  filter_red.csv  frl_cells.csv  kolodny_marine_pbs.csv  l_glaciale.csv  psii_wientjies.csv  (+3 more)
